--- a/Movies/Views/SerieCollectionViewCell/SerieCollectionViewCell.xib
+++ b/Movies/Views/SerieCollectionViewCell/SerieCollectionViewCell.xib
@@ -10,18 +10,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="movieCollectionCell" id="gTV-IL-0wX" customClass="MovieCollectionViewCell" customModule="Movies" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="serieCollectionCell" id="Q5i-KJ-RBC" customClass="SerieCollectionViewCell" customModule="Movies" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="163" height="102"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="163" height="102"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PwR-Y4-adO">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dai-Cd-0AO">
                         <rect key="frame" x="0.0" y="0.0" width="163" height="102"/>
                         <color key="backgroundColor" name="AccentColor"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aw8-hg-DPy">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OpF-ag-kVh">
                         <rect key="frame" x="8" y="76" width="147" height="18"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -29,20 +29,22 @@
                     </label>
                 </subviews>
             </view>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <viewLayoutGuide key="safeArea" id="zl5-bj-ejJ"/>
             <constraints>
-                <constraint firstItem="PwR-Y4-adO" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Bd0-fH-QJU"/>
-                <constraint firstItem="PwR-Y4-adO" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Tex-pD-E5f"/>
-                <constraint firstAttribute="trailing" secondItem="PwR-Y4-adO" secondAttribute="trailing" id="bMU-2E-aOq"/>
-                <constraint firstAttribute="bottom" secondItem="aw8-hg-DPy" secondAttribute="bottom" constant="8" id="gVd-iI-n8n"/>
-                <constraint firstAttribute="bottom" secondItem="PwR-Y4-adO" secondAttribute="bottom" id="iiE-s9-sCo"/>
-                <constraint firstAttribute="trailing" secondItem="aw8-hg-DPy" secondAttribute="trailing" constant="8" id="xfs-fb-maK"/>
-                <constraint firstItem="aw8-hg-DPy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="zk3-Ia-RLq"/>
+                <constraint firstAttribute="trailing" secondItem="OpF-ag-kVh" secondAttribute="trailing" constant="8" id="3yK-Ra-sG5"/>
+                <constraint firstAttribute="bottom" secondItem="OpF-ag-kVh" secondAttribute="bottom" constant="8" id="9Xo-ml-VQ9"/>
+                <constraint firstItem="dai-Cd-0AO" firstAttribute="top" secondItem="Q5i-KJ-RBC" secondAttribute="top" id="GDR-by-Dir"/>
+                <constraint firstAttribute="trailing" secondItem="dai-Cd-0AO" secondAttribute="trailing" id="Utb-tw-aDz"/>
+                <constraint firstItem="dai-Cd-0AO" firstAttribute="leading" secondItem="Q5i-KJ-RBC" secondAttribute="leading" id="ZWW-lP-KLK"/>
+                <constraint firstItem="OpF-ag-kVh" firstAttribute="leading" secondItem="Q5i-KJ-RBC" secondAttribute="leading" constant="8" id="dki-dj-jaS"/>
+                <constraint firstAttribute="bottom" secondItem="dai-Cd-0AO" secondAttribute="bottom" id="yop-I2-qd6"/>
             </constraints>
             <size key="customSize" width="163" height="102"/>
             <connections>
-                <outlet property="movieImageView" destination="PwR-Y4-adO" id="lzq-hz-kM6"/>
-                <outlet property="movieTitleLabel" destination="aw8-hg-DPy" id="6oz-1j-BXI"/>
+                <outlet property="SerieImageView" destination="dai-Cd-0AO" id="Ifv-UT-qiG"/>
+                <outlet property="SerieLabelView" destination="OpF-ag-kVh" id="c22-cA-d6h"/>
+                <outlet property="movieImageView" destination="dai-Cd-0AO" id="ulq-E0-0Tt"/>
+                <outlet property="movieTitleLabel" destination="OpF-ag-kVh" id="IMX-48-0B0"/>
             </connections>
             <point key="canvasLocation" x="210.86956521739131" y="6.6964285714285712"/>
         </collectionViewCell>
