--- a/Movies/Views/SerieTableViewCell/SerieTableViewCell.xib
+++ b/Movies/Views/SerieTableViewCell/SerieTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="movieTableCell" id="SSb-oh-4YX" customClass="MovieTableViewCell" customModule="Movies" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="movieTableCell" id="SSb-oh-4YX" customClass="SerieTableViewCell" customModule="Movies" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="56"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SSb-oh-4YX" id="SqP-kt-auU">
@@ -64,6 +64,11 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="VHF-cZ-Pwk"/>
+            <connections>
+                <outlet property="serieGenreLabel" destination="D0U-pR-SVB" id="KvG-cq-cY1"/>
+                <outlet property="serieImageView" destination="V0H-Dv-8An" id="KY9-jJ-gJD"/>
+                <outlet property="serieTitleLabel" destination="G8k-2u-I3h" id="8TX-sz-QcK"/>
+            </connections>
             <point key="canvasLocation" x="128.98550724637681" y="-12.723214285714285"/>
         </tableViewCell>
     </objects>
